# datenschranke

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  README.md  deploy.sh  docker-compose.ghcr.yml  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: build-images.yml  ci.yml
apps/gateway/: Dockerfile  package.json
apps/gateway/src/: accounts.ts  audit.ts  auth.ts  bootstrap.ts  chatCore.ts  config.ts  conversations.ts  db.ts  index.ts  password.ts  pipeline.ts  policy.ts  principal.ts  providers.ts  redactorClient.ts  server.ts  sessions.ts  vault.ts
apps/web/: Dockerfile  next.config.ts  package.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/components/: Aurora.tsx  ChangePassword.tsx  CustomEntities.tsx  Icons.tsx  Markdown.tsx  RedactionPanel.tsx  (+3 more)
docs/: coolify.md  deploy.md
docs/adr/: 0001-gateway-owns-vault.md  0002-gateway-runs-from-typescript.md
infra/: Caddyfile
infra/migrations/: 0001_init.sql  0002_gateway_role.sql  0003_auth_lookup.sql  0004_messages.sql  0005_auth_users.sql  migrate.mjs  package.json  seed.mjs  smoke.mjs
services/provider-mock/: Dockerfile  server.mjs
services/redactor/: Dockerfile  pyproject.toml
services/redactor/app/: analyzer.py  image_redactor.py  main.py  models.py  placeholder.py  recognizers.py  redactor.py  regex_safety.py
services/redactor/tests/: test_german_detection.py  test_placeholder_crosslang.py  test_redactor_logic.py  test_regex_safety.py
tests/load/: README.md  chat-users.ts  proxy-throughput.ts  redactor-bench.ts  sizing.ts  soak.ts
(+18 files in other folders)
